# gladiator

./: .gitignore  README.md  pyproject.toml
data/: enum_underlying_type_overrides  low_level_types
example/: CMakeLists.txt
example/cmake/: generate_wrappers.cmake  gladiator-global.yaml  gladiator-scoped.yaml  gladiator_requirements.cmake
example/global/: CMakeLists.txt
example/global/cmake/: generate_wrappers.cmake  gladiator.yaml
example/global/src/: main.cxx
example/src/: main.cxx
gladiator/: __init__.py  __main__.py  mixins.py  optional.py  options.py
gladiator/generate/: code.py  constants.py  templates.py
gladiator/parse/: command.py  enum.py  feature.py
gladiator/parser/: command.py  enum.py  extension.py  feature.py  type.py
gladiator/prepare/: command.py  enum.py  feature.py  style.py
gladiator/resources/data/: cpp_keywords  enum_name_overrides  scoped_resources_multi
gladiator/resources/templates/: enum_collection.jinja2
gladiator/resources/templates/_include/: scoped_resource_global.hxx
gladiator/resources/templates/loader/: global.jinja2  object.jinja2
gladiator/resources/templates/util/: wrapper.jinja2
templates/: enum.jinja2  types.jinja2
templates/loader/: global.jinja2
templates/util/: conversion.jinja2  dependencies.jinja2  khrplatform.jinja2  scoped_enum_bitfield.jinja2  type_reference.jinja2
tests/: conftest.py  test_command.py  test_enum.py  test_extension.py  test_features.py  test_prepare.py  test_style.py  test_type.py
